# telegram-dice-maestro-oxide

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.gha  cross.toml
.github/: dependabot.yml
.github/workflows/: audit.yaml  build.yaml  build_reusable.yaml
examples/compose/: compose.env.example  docker-compose.yaml
src/: cli.rs  dice.rs  dnd.rs  main.rs  parser.rs  storage.rs  user.rs  utils.rs
