[package]
name = "telegram-dice-maestro-oxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive", "env"] }
glob = "0.3.1"
log = "0.4"
nom = "7.1.3"
pretty_env_logger = "0.5"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde-aux = { version = "4.5.0", default-features = false }
serde_json = "1.0.115"
teloxide = { version = "0.12", features = ["macros", "cache-me", "throttle", "ctrlc_handler"], default-features = false }
thiserror = "1.0.58"
tokio = { version =  "1.37", features = ["rt-multi-thread", "macros"] }

[features]
default = ["rustls"]
rustls = ["teloxide/rustls"]
openssl = ["teloxide/native-tls"]
