[package]
name = "telegram-dice-maestro-oxide"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
glob = "0.3.3"
log = "0.4.29"
nom = "8.0.0"
pretty_env_logger = "0.5.0"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = { version = "4.7.0", default-features = false }
serde_json = "1.0.149"
teloxide = { version = "0.17.0", features = ["macros", "cache-me", "throttle", "ctrlc_handler"], default-features = false }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros"] }

[features]
default = ["rustls"]
rustls = ["teloxide/rustls"]
openssl = ["teloxide/native-tls"]
